<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_screening_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_screening_detail_poster"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/cd_poster"
            android:scaleType="centerCrop"
            android:src="@drawable/poster_harry_potter_and_the_philosophers_stone"
            app:layout_constraintDimensionRatio="360:341"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="20dp"
            android:paddingTop="27dp"
            android:paddingBottom="20dp"
            app:layout_constraintTop_toBottomOf="@id/iv_screening_detail_poster">

            <TextView
                android:id="@+id/tv_screening_detail_movie_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="27dp"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:text="해리포터와 마법사의 돌" />

            <TextView
                android:id="@+id/tv_screening_detail_movie_period"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="27dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                tools:text="@string/screening_period" />

            <TextView
                android:id="@+id/tv_screening_detail_movie_running_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="16sp"
                tools:text="@string/running_time" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="27dp"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/spinner_screening_detail_date"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="26dp"
                    android:layout_weight="1"
                    android:paddingVertical="13dp" />

                <Spinner
                    android:id="@+id/spinner_screening_detail_time"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:paddingVertical="13dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="19dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_screening_detail_minus"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/screening_detail_minus_symbol"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_screening_detail_count"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:text="1" />

                <Button
                    android:id="@+id/btn_screening_detail_plus"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/screening_detail_plus_symbol"
                    android:textSize="25sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_screening_detail_select_complete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="20dp"
                android:paddingVertical="11dp"
                android:text="@string/screening_detail_select_complete"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
