...
            android:id="@+id/seat_select_button"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="예매"
            android:textSize="20sp"
            app:cornerRadius="0dp"
            app:layout_constraintEnd_toEndOf="parent" />
    </LinearLayout>

    <TextView
...
